# gpauto

./: Cargo.toml
src/: cli.rs  gpauto.rs  lib.rs  main.rs
