[package]
name = "gpauto"
version = "0.1.0"
authors = ["Aven Arlington <aven.arlingont@gmail.com>"]
edition = "2018"
description = "Simple utility to automatically pull repositories in a directory"
repository = "https://github.com/aven-arlington/gpauto"
license = "MIT"

[dependencies]
clap = { version = "4.*", features = ["derive", "string", "env"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
   "default",
   "env-filter",
   "fmt",
] }

[[bin]]
name = "gpautobin"
path = "src/main.rs"

[lib]
name = "gpauto"
path = "src/lib.rs"
